# pipeline

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  run_tests.bat
cogit/: 001-plan-performance-analysis.md  002-plan-async-loading.md  004-plan-db-upload-optimization.md  assessment.md  async-loading-results.md  performance-assessment-results.md  plan-execute.md  task-002-honest-summary.md
planning/: 001-plan-performance-analysis.md  002-plan-async-loading.md  003-plan-embedding-batching.md  005-plan-profiling.md  plan-execute.md
playground/: async_loading_test.py  baseline_test.py  perf_profile.py
scripts/: perf_profile.py
src/pipeline/: embedder.py  generator.py  indexer.py  processor.py  retriever.py
src/pipeline/prompts/: eval_ground_truth.md  eval_query_generation.md  manager.py  standard.md
src/pipeline/utils/: configs.py  logging.py  model.py  types.py
